    implemented by Ignacio Ruiz Cejudo.

*** Library

  - gal_units_sblim_diff: calculate the difference in surface brighntess
    limit only assuming a different effective radius of a different
    telescope and/or a different exposure time.

  - gal_units_wavelength_flux_density_to_jy: convert given wavelength flux
    density (erg/s/cm^2/A) to Janskys.

** Removed features
** Changed features

*** Library

  - gal_match_kdtree: a new 'arrange' argument has been added to define the
    arrangement of the output.

** Bugs fixed

  - bug #66216: NaN values in MakeProfile outputs for very small profiles
    (smaller than a pixel even after accounting for the truncation
    factor). Reported by Alejandro Camazón Pinilla.

  - bug #66262: color-faint-gray crashes when using --graykernelfwhm. Found
    and fixed by Samane Raji.

  - bug #66280: Convolve's check images not in same directory as output.

  - bug #66303: astscript-color-faint-gray crashes if using 4th
    channel. Reported by Elizabeth Sola and fixed by Raul Infante-Sainz.

  - bug #66308: Library's 'gal_wcs_img_to_world' and 'gal_wcs_world_to_img'
    returned inverse names when the operation was not in-place. Found and
    fixed by Giacomo Lorenzetti.

  - bug #66309: Match crashes if kdtree is not set. Found and fixed by
    Giacomo Lorenzetti.

  - bug #66572: MakeProfiles continues adding pixels after truncation when
    the profile is small (a couple of pixels), and the gradient is strong.

  - bug #66588: Arithmetic's 'trim' operator does not produce 0x0 image
    when all the image is blank.





* Noteworthy changes in release 0.23 (library 21.0.0) (2024-07-13)
** New publications

  - https://ui.adsabs.harvard.edu/abs/2024RNAAS...8..168E by Eskandarlou
    and Akhlaghi describing the newly added polar plot capability of
    'astscript-radial-profile' (see the figure in the paper).

** New features
*** Arithmetic

  --append: if the output file already exists, don't delete it, add the